[tool.poetry]
name = "certipie"
version = "0.1.0"
description = "A tool to create certificate signing request and self-signed certificates"
authors = ["le_woudar <lewoudar@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["certificate", "cli", "cryptography", "fastapi", "csr"]
repository = "https://github.com/lewoudar/certipie"
documentation = "https://github.com/lewoudar/certipie#readme"

classifiers = [
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Topic :: Terminals",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent"
]

packages = [
    { include = "certipie" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lewoudar/certipie/issues"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
click = "^8.0.3"
cryptography = "^36.0.1"
hypercorn = "^0.13.2"
idna = "^3.3"
python-multipart = "^0.0.5"
click-didyoumean = "^0.3.0"
click-params = "^0.1.2"
trio = "^0.20.0"
shellingham = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
bandit = "^1.7.2"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"
requests = "^2.27.1"
httpie = "^3.0.2"
nox = "^2022.1.7"

[tool.poetry.scripts]
cert = "certipie.cli.main:cert"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=certipie --cov-report html --cov-report xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
